fix menu sizing on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -65,8 +65,10 @@ body {
 }
 
 /* bootstrap 3 helpers */
-.navbar-nav {
-  height: 60px;
+@include MQ(M) {
+  .navbar-nav {
+    height: 60px;
+  }
 }
 .navbar-form input, .form-inline input {
   width:auto;
